tests/data/partialapp/negative/No warning for right piped args.fs
module M

let myFunc a b = a + b

20 |> myFunc 10
